feat:[3단계] 로또 2등 당첨 구현